# anpr_openai

./: .gitignore  main.py  ocr_with_tesseract.py  openai_ocr.py  pyproject.toml  video_inference.py
